[gd_scene load_steps=13 format=2]

[ext_resource path="res://bacground/clear.png" type="Texture" id=1]
[ext_resource path="res://scene/GameOver.gd" type="Script" id=2]
[ext_resource path="res://image/bst_clear1.png" type="Texture" id=3]
[ext_resource path="res://image/Gugi-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://score_value.tres" type="Resource" id=5]

[sub_resource type="DynamicFont" id=1]
size = 68
outline_size = 5
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 55
outline_size = 5
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 55
outline_size = 5
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 31
extra_spacing_char = 7
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 31
extra_spacing_char = 7
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 23
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 23
font_data = ExtResource( 4 )

[node name="GameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
ScoreV = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.466667, 0.643137, 0.313726, 0.384314 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="CenterContainer"]
margin_left = 425.0
margin_top = 186.0
margin_right = 1125.0
margin_bottom = 686.0
rect_min_size = Vector2( 700, 500 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
region_rect = Rect2( 0.469765, 1.65938, 247.698, 246.458 )
patch_margin_left = 22
patch_margin_top = 19
patch_margin_right = 28
patch_margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 500.0
margin_top = 233.0
margin_right = 1050.0
margin_bottom = 639.0
custom_constants/separation = 13

[node name="CenterContainer4" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 550.0
margin_bottom = 60.0

[node name="RichTextLabel" type="RichTextLabel" parent="CenterContainer/VBoxContainer/CenterContainer4"]
margin_left = 75.0
margin_right = 475.0
margin_bottom = 60.0
rect_min_size = Vector2( 400, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.309804, 0.545098, 0.890196, 1 )
bbcode_enabled = true
bbcode_text = "Game Over!"
text = "Game Over!"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container2" type="Container" parent="CenterContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 550.0
margin_bottom = 103.0
rect_min_size = Vector2( 0, 30 )

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 550.0
margin_bottom = 176.0

[node name="Score" type="RichTextLabel" parent="CenterContainer/VBoxContainer/CenterContainer"]
margin_right = 550.0
margin_bottom = 60.0
rect_min_size = Vector2( 550, 60 )
size_flags_horizontal = 15
size_flags_vertical = 15
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 0.513726, 0.133333, 1 )
bbcode_enabled = true
bbcode_text = "Score"
text = "Score"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 189.0
margin_right = 550.0
margin_bottom = 249.0

[node name="MaxCombo" type="RichTextLabel" parent="CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 550.0
margin_bottom = 60.0
rect_min_size = Vector2( 550, 60 )
size_flags_horizontal = 15
size_flags_vertical = 15
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 1, 0.513726, 0.133333, 1 )
bbcode_enabled = true
bbcode_text = "Game Over!"
text = "Game Over!"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="Container" parent="CenterContainer/VBoxContainer"]
margin_top = 262.0
margin_right = 550.0
margin_bottom = 282.0
rect_min_size = Vector2( 0, 20 )

[node name="CenterContainer3" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 295.0
margin_right = 550.0
margin_bottom = 335.0

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer3"]
margin_left = 175.0
margin_right = 375.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_disabled = Color( 0.956863, 0.984314, 0.682353, 1 )
text = "ReStart"

[node name="Container3" type="Container" parent="CenterContainer/VBoxContainer"]
margin_top = 348.0
margin_right = 550.0
margin_bottom = 353.0
rect_min_size = Vector2( 0, 5 )

[node name="CenterContainer5" type="CenterContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 366.0
margin_right = 550.0
margin_bottom = 406.0

[node name="Quit" type="Button" parent="CenterContainer/VBoxContainer/CenterContainer5"]
margin_left = 175.0
margin_right = 375.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0.956863, 0.984314, 0.682353, 1 )
text = "Quit"

[node name="bst_clear1" type="Sprite" parent="."]
position = Vector2( 1016.58, 624.685 )
scale = Vector2( 6, 6 )
texture = ExtResource( 3 )

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
modulate = Color( 1, 0.992157, 0.745098, 1 )
margin_left = 743.417
margin_top = 695.379
margin_right = 1123.42
margin_bottom = 795.379
rect_min_size = Vector2( 380, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 1 )
region_rect = Rect2( 0.469765, 1.65938, 247.698, 246.458 )
patch_margin_left = 22
patch_margin_top = 19
patch_margin_right = 28
patch_margin_bottom = 25
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect2/CenterContainer"]
margin_left = 68.0
margin_top = 21.0
margin_right = 312.0
margin_bottom = 78.0
custom_constants/separation = 9

[node name="CenterContainer" type="CenterContainer" parent="NinePatchRect2/CenterContainer/VBoxContainer"]
margin_right = 244.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="NinePatchRect2/CenterContainer/VBoxContainer/CenterContainer"]
margin_left = 23.0
margin_right = 220.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0.533333, 0.254902, 0.980392, 1 )
text = "SCORE RECORD:0"

[node name="CenterContainer2" type="CenterContainer" parent="NinePatchRect2/CenterContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 244.0
margin_bottom = 57.0

[node name="Label2" type="Label" parent="NinePatchRect2/CenterContainer/VBoxContainer/CenterContainer2"]
margin_right = 244.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.0823529, 0.760784, 0.6, 1 )
text = "MaxCombo RECORD:0"

[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer3/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/CenterContainer5/Quit" to="." method="_on_Quit_pressed"]
